Fix overflowing shadow of search on mobile

--- a/app/assets/stylesheets/elements/_search.scss
+++ b/app/assets/stylesheets/elements/_search.scss
@@ -8,7 +8,7 @@
     position: absolute;
     left: 4rem;
     bottom: .65rem;
-    height: 30%;
+    height: 20%;
     width: calc(100% - 8rem);
     z-index: -1;
     opacity: .45;
